Fix visibility issue

--- a/game_experiments/tic-tac-toe/style.css
+++ b/game_experiments/tic-tac-toe/style.css
@@ -16,6 +16,50 @@
     cursor: pointer;
 }
 
+.cell.x::before,
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 100px;
+    background-color: black;
+}
+
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    transform: rotate(-45deg);
+}
+
+.cell.circle::before,
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+}
+
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before {
+    width: 90px;
+    height: 90px;
+    background-color: black;
+}
+
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+}
+
 .winning-message {
     display: none;
     flex-direction: column;
